fixed side bar being overlapped by form entries using css z-index property. Some comments added noting app configuration for pythonanywhere #28

--- a/bookingsystem/static/css/auth.css
+++ b/bookingsystem/static/css/auth.css
@@ -15,6 +15,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 0;
 }
 
 button,
@@ -39,6 +40,7 @@ input {
   border-radius: 20px;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
+
 }
 
 h1 {
@@ -66,6 +68,7 @@ h2 span {
   width: 100%;
   position: relative;
   margin-bottom: 50px;
+  z-index: 0;
 }
 
 .signup__field:before {
